src/objects/Pay_Gateway__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Pay_Gateway</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Min_amount_to_accept__c</fullName>
        <label>Min amount to accept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PG_Email_Id__c</fullName>
        <label>PG Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PG_Pass_Secret__c</fullName>
        <label>PG Pass Secret</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>PG_Signature__c</fullName>
        <label>PG Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_User_Key__c</fullName>
        <label>PG User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGateway_Type__c</fullName>
        <label>PGateway Type</label>
        <referenceTo>PGateway_Type__c</referenceTo>
        <relationshipName>Pay_Gateway</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PP_Fee_Payer__c</fullName>
        <description>This field determines the paypal fee payer</description>
        <label>PP Fee Payer</label>
        <picklist>
            <controllingField>PP_Payment_Type__c</controllingField>
            <picklistValues>
                <fullName>EACHRECEIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIMARYRECEIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECONDARYONLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PP_Payment_Type__c</fullName>
        <description>This field determines the Paypal payment type</description>
        <label>PP Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parallel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <label>Pay Gateway Service Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Pay Gateway</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PGateway_Type__c</columns>
        <columns>Company__c</columns>
        <columns>PG_Email_Id__c</columns>
        <columns>PG_Signature__c</columns>
        <columns>PP_Fee_Payer__c</columns>
        <columns>PP_Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PG-{00000000}</displayFormat>
        <label>Pay Gateway Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Pay Gateway</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>